--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
     let pwd2 = 'stROmBoLi'
 
     // Add your code here
+    let weightComparison;
+    let heightComparison;
+    let pwdMatch;
 
+    console.log(weightComparison = (eleWeight < mouseWeight));
+    console.log(heightComparison = (ostrichHeight > duckHeight));
+    console.log(pwdMatch = (pwd1 === pwd2));
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
